# UserDashBoard

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.celery  LICENSE  Makefile  README.md  docker-compose.simple.yml  docker-compose.yml  manage.py  pyproject.toml  requirement.txt  requirements-dev.txt  requirements.txt  requirment.txt  restart-celery.sh  setup-dev.bat  setup-dev.sh  tatus  test_aggregation_api.py  test_create_dataset.py  test_dataset_columns_api.py  test_login_api.py
.github/workflows/: ci.yml
Account/: admin.py  manager.py  models.py  serializers.py  urls.py  views.py
Account/fixtures/: data.json
Account/management/commands/: populate_data.py
Account/migrations/: 0001_initial.py  0002_dataset.py  0003_dataset_file.py  0004_remove_dataset_file.py  0005_user_is_active_user_is_staff.py
Dashboard/: serializer.py  serializers.py  tasks.py  urls.py  views.py
fixtures/: data.json
scripts/: create_minio_bucket.py  entrypoint.sh  upload_sample_file.py
templates/: base.html
templates/account/: login.html
templates/dashboard/: dataset_detail.html  datasets.html  index.html  upload.html
userdashboard/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
utils/: aggregate.py  aws_config.py  backblaze.py  functions.py
